[gd_scene load_steps=10 format=2]

[ext_resource path="res://Enemies/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemies/Redba.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Redba.gd" type="Script" id=3]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform vec4 flash_color: hint_color = vec4(1.0);
uniform float flash_modifier: hint_range(0.0, 1.0) = 1.0;

void fragment() {
	vec4 color = texture(TEXTURE, UV);
	color.rgb = mix(color.rgb, flash_color.rgb, flash_modifier);
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 9, 14 )

[sub_resource type="Animation" id=4]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 14, 16 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 13, 15 )

[node name="Redba" instance=ExtResource( 1 )]
script = ExtResource( 3 )
maxSpeed = 30
sizeScale = 1.0
walkDirection = 1

[node name="Sprite" parent="." index="0"]
material = SubResource( 2 )
position = Vector2( 0, -32 )
texture = ExtResource( 2 )
hframes = 6
frame = 4

[node name="Center" parent="Sprite" index="0"]
position = Vector2( 0, 16 )

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( 0, -14 )
shape = SubResource( 3 )

[node name="AnimationPlayer" parent="." index="2"]
autoplay = "Walk"
playback_speed = 0.8
anims/Walk = SubResource( 4 )

[node name="FloorLeft" type="RayCast2D" parent="." index="3"]
position = Vector2( -6, -1 )
enabled = true
cast_to = Vector2( 0, 7 )
collision_mask = 2

[node name="FloorRight" type="RayCast2D" parent="." index="4"]
position = Vector2( 6, -1 )
enabled = true
cast_to = Vector2( 0, 7 )
collision_mask = 2

[node name="WallRight" type="RayCast2D" parent="." index="5"]
position = Vector2( 0, -9 )
enabled = true
cast_to = Vector2( 12, 0 )
collision_mask = 2

[node name="WallLeft" type="RayCast2D" parent="." index="6"]
position = Vector2( 0, -9 )
enabled = true
cast_to = Vector2( -12, 0 )
collision_mask = 2

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 0, -16 )
shape = SubResource( 5 )

[node name="EnemyStats" parent="." index="8"]
maxHealth = 3

[node name="HitBox" parent="." index="9"]
damage = 5
knockback = 100.0

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 0, -15 )
shape = SubResource( 6 )

[editable path="HurtBox"]
[editable path="HitBox"]
